2003-01-23  David Hyatt  <hyatt@apple.com>

	Fix for 3142124.  

	When pseudo-elements have display:none, they should not generate
	rendering objects.
	
        Reviewed by rjw, kocienda.

        * khtml/rendering/render_container.cpp:
        (RenderContainer::insertPseudoChild):

2003-01-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3129556 -- can't search on japanese string at yahoo.co.jp

	The key to fixing this was to look up character sets in a way that does not
	pay attention to punctuation. Only alphanumeric characters count. Also did
	a little belt tightening and speeding up while I was at it.

        * kwq/KWQCharsets.h: Use const char * instead of CFStringRef.
        * kwq/KWQCharsets.mm:
        (buildDictionaries): Store const char * in the dictionaries instead of CFStringRef,
	and use the key compare and hash functions that obey only alphanumeric characters.
        (KWQCFStringEncodingFromIANACharsetName): Use const char * directly.
        (KWQCFStringEncodingFromMIB): Tweak code a bit.
        (KWQCFStringEncodingToIANACharsetName): Use const char * directly.
        (KWQCFStringEncodingToMIB): Tweak code a bit.
        (encodingNamesEqual): Added. Compares two names, ignoring non-alphanumeric characters.
        (encodingNameHash): Added.

        * kwq/KWQKCharsets.h: Take a const char * instead of a QString. Also overload for QCString.
	This fixes conversion back and forth from QString that was happening before.
        * kwq/KWQKCharsets.mm: (KCharsets::codecForName): Update for above parameter change.

        * kwq/KWQTextCodec.mm:
        (codecForCFStringEncoding): Add check for kCFStringEncodingInvalidId.
        (QTextCodec::codecForMib): Simplify because of above check.
        (QTextCodec::codecForName): Simplify because we don't need to make a CFStringRef, and
	because of above check.
        (QTextCodec::name): No need to convert the CFStringRef back to a const char * now.
