@@ -1,3 +1,13 @@
+2003-01-23  Darin Adler  <darin@apple.com>
+
+        Reviewed by John.
+
+	- fixed 3154647 -- Triple clicked on a line of text (to select entire line), crashola
+
+        * khtml/khtml_part.cpp:
+        (firstSlaveAt): Loop instead of using recursion for siblings.
+        (lastSlaveAt): Ditto, only backwards.
+
 2003-01-23  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3142124.  
